--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -13,7 +13,7 @@
 		<div class="main">
 
 			<div class="header">
-				<nav class="navbar navbar-default">
+				<nav class="navbar navbar-custom">
 				  <div class="container-fluid">
 				    <div class="navbar-header">
 				      <button type="button" class="navbar-toggle orange" data-toggle="collapse" data-target="#myNavbar">
@@ -21,7 +21,7 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>                        
 				      </button>
-				      <a class="navbar-brand" href="#">BITLY</a>
+				      <a class="navbar-brand" href="https://bitly.com/">BITLY</a>
 				    </div>
 				    <div class="collapse navbar-collapse" id="myNavbar">
 				      <ul class="nav navbar-nav">
@@ -40,6 +40,7 @@
 			</div>
 
 			<div class="container-fluid">
+			  <h3 class ="center white">BITLY clone</h3> 
 			  <h1 class="center white">THE LINK KNOWS ALL. SO CAN YOU</h1>
 			  <p class="center white">Measure your links with Bitly, the world's leading link management platform.</p><br>
 				
@@ -56,22 +57,23 @@
 			</div>
 		</div>
 		
-
-		<table id= "url_table" style = "width:100%">
-			<tr>
-				<th> Long Url </th>
-				<th> Short Url </th>
-				<th> click count </th>
-			</tr>
-			
-			<%  @all_url.each do |x| %>
+		<div class="container-fluid">
+		<table id= "url_table">
 				<tr>
-					<td> <%= x.long_url %> </td> 
-					<td> <a href= <%= x.short_url%> target="_blank"> <%= x.short_url%> </a> </td>
-					<td> <%= x.click_count %> </td>
+					<th> Long Url </th>
+					<th> Short Url </th>
+					<th> click count </th>
 				</tr>
-			<% end %>
+				
+				<%  @all_url.each do |x| %>
+					<tr  class="linkrow">
+						<td> <%= x.long_url %> </td> 
+						<td class="shorturl"> <a href= <%= x.short_url%> target="_blank"> <%= x.short_url%> </a> </td>
+						<td class="clickcount"> <%= x.click_count %> </td>
+					</tr>
+				<% end %>
 
-		</table>
+			</table>
+		</div>
 	</body>
 </html>
